--- a/style.css
+++ b/style.css
@@ -24,6 +24,45 @@ body {
     overflow-x: hidden;
 }
 
+.blog-wrapper {
+    margin: 0 1rem;
+}
+
+.blog-page {
+    margin: auto; 
+    max-width: 700px;
+    color: rgb(40, 40, 40);
+    text-align: justify;
+}
+
+h1 {
+    color: var(--blue);
+}
+
+h2 {
+    margin: 2rem 0 1rem 0;
+}
+
+code, pre {
+    font-family: monospace;
+    background-color: #b8b8b891;
+    border-radius: var(--border-radius);
+    padding: 0.25rem;
+    overflow: auto;
+}
+
+pre {
+    margin: 1rem 0;
+    padding: 1rem;
+}
+
+img.blog-movie-image {
+    width: 100%;
+    height: auto;
+    margin: 1rem 0;
+    border-radius: var(--border-radius);
+}
+
 nav {
     /* position: sticky;
     top: 0; 
@@ -177,7 +216,7 @@ nav ul li a {
 }
 
 .skill-section i {
-    font-size: 80px;
+    font-size: 60px;
     padding: 1rem;
 }
 
@@ -200,7 +239,7 @@ nav ul li a {
     justify-content: space-around;
 }
 
-.project-section .wrapper {
+/* .project-section .wrapper {
     width: 40%;
     border-right: 4px solid var(--blue);
     border-bottom: 4px solid var(--blue);
@@ -210,13 +249,55 @@ nav ul li a {
     padding: 1rem;
     margin: 1rem 0;
     box-shadow: var(--box-shadow);
+} */
+
+.project-section .wrapper {
+    display: flex;
+    align-items: stretch;
+    box-shadow: var(--box-shadow);
+    border-right: 4px solid var(--blue);
+    border-bottom: 4px solid var(--blue);
+    border-top: 2px solid var(--blue);
+    border-left: 2px solid var(--blue);
+    border-radius: var(--border-radius);
+    margin: 1rem;
+    padding: 1rem;
+}
+
+.project-section .wrapper .image {
+    flex: 45%;
+}
+
+.project-section .wrapper img {
+    width: 100%;
+    height: auto;
+    image-rendering: auto;
+    border-radius: var(--border-radius);
+}
+
+.project-section .project-text {
+    margin: 0 1.5rem;
+    flex: 55%;
 }
 
 .project .name {
-    font-family: var(--sacramento);
-    font-size: 2.5rem;
-    margin: 0.5rem 0;
+    font-family: var(--poppins);
+    font-size: 1.75rem;
+    margin-bottom: 0.5rem;
     color: var(--blue);
+}
+
+.project .details {
+    margin-top: 0.5rem;
+}
+
+.mark, button.github, button.read-now {
+    color: var(--blue);
+    border: 1px solid var(--blue);
+    background-color: var(--light-bg);
+    border-radius: var(--border-radius);
+    padding: 0.15rem 0.5rem;
+    margin: 0 0.25rem;
 }
 
 .about .text, .wrapper .details, .blog-section .content, .home-content {
@@ -238,37 +319,47 @@ nav ul li a {
 }
 
 .blog-section {
-    margin: 0rem 9rem;
+    max-width: 800px;
+    margin: auto;
 }
 
 .blog-section .blog {
-    width: 100%;
     padding: 0;
-    margin: 2rem 0;
+    margin: 2rem;
     box-shadow: var(--box-shadow);
+    border-right: 4px solid var(--blue);
+    border-left: 2px solid var(--blue);
+    /* border-top: 2px solid var(--blue); */
+    border-radius: var(--border-radius);
+    border-bottom: 4px solid var(--blue);
+    outline: none;
 }
 
 .blog-section .name {
     width: 100%;
-    font-size: 2rem;
-    font-family: var(--sacramento);
+    font-size: 1.5rem;
     background-image: linear-gradient(190deg, var(--light-blue), var(--blue));
     color: var(--light-bg);
+    margin-bottom: 1rem;
     padding: 1rem;
-    border-radius: var(--border-radius) var(--border-radius) 0 0;
-    border-right: 4px solid var(--blue);
-    border-left: 2px solid var(--blue);
-    border-top: 2px solid var(--blue);
+}
+
+.project-section small, .blog-section small {
+    opacity: 0.8;
+}
+
+.blog-section small {
+    margin: 0 1rem;
 }
 
 .blog-section .content {
     width: 100%;
     margin: 0;
     padding: 1rem;
-    border-right: 4px solid var(--blue);
-    border-bottom: 4px solid var(--blue);
-    border-left: 2px solid var(--blue);
-    border-radius: 0 0 var(--border-radius) var(--border-radius);
+}
+
+.blog i, .project i {
+    padding-left: 0.35rem;
 }
 
 .project-home, .blog-home {
@@ -359,22 +450,19 @@ nav ul li a {
         padding: 0 3rem;
     }
     .project-section .wrapper {
-        width: 47%;
+        flex-direction: column;
+        width: 60%;
         padding: 1rem;
         margin: 1rem 0;
     }
+    .project .project-text {
+        margin: 0;
+    }
     .project .name {
-        font-size: 2.25rem;
+        font-size: 1.5rem;
         margin: 0.5rem 0;
     }
     
-    .blog-section {
-        margin: 0 5rem;
-    }
-    .blog .name {
-        font-size: 2.25rem;
-    }
-
     .project-home, .blog-home {
         width: 70%;
     }
@@ -411,14 +499,13 @@ nav ul li a {
         margin: 1.5rem;
     }
     .project-section .project {
-        flex-direction: column;
         align-items: center;
     }
     .project-section {
         padding: 0 2rem;
     }
     .project-section .wrapper {
-        width: 80%;
+        width: 60%;
     }
 
     .skill-section ul.skill, .skill-section .wrapper {
@@ -427,13 +514,7 @@ nav ul li a {
         align-items: center;
         flex-wrap: wrap;
         margin: 0.75rem;
-    }
-    
-    .skill-section i {
-        font-size: 60px;
-        padding: 1rem;
-    }
-    
+    }    
 }
 
 @media (max-width: 600px) {
@@ -490,11 +571,11 @@ nav ul li a {
         width: 85%;
     }
     .project .name, .blog .name {
-        font-size: 2rem;
-        margin: 0;
+        font-size: 1.35rem;
     }
-    .blog-section {
-        margin: 0 3.5rem;
+
+    .blog-section .blog {
+        margin: 2rem 1rem;
     }
     .project-home, .blog-home {
         width: 80%;
@@ -524,7 +605,6 @@ nav ul li a {
         font-size: 1rem;
     }
     .action, .wrapper button, .blog-section button, .home-content button{
-        font-size: 0.7rem;
         padding: 0.25rem 0.5rem;
         margin: 0.5rem 0;    
     }
@@ -553,15 +633,6 @@ nav ul li a {
         width: 95%;
     }
 
-    .blog-section {
-        margin: 0 1rem;
-    }
-    .blog-section .blog {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
     .contact-section .footer {
         font-size: 0.9rem;
     }    
