--- a/style.css
+++ b/style.css
@@ -303,6 +303,10 @@ nav ul li a {
     margin: 0 0.25rem;
 }
 
+.mark {
+    margin: 0 0.25rem 0 0;
+}
+
 .about .text, .wrapper .details, .blog-section .content, .home-content {
     font-size: 1rem;
     text-align: justify;
